# MPU_Unmanned-Aerial-Vehicle

./: CMakeLists.txt  CMakePresets.json  README.md
Inc/: BatteryManager.hpp  FlightController.hpp  InterData.hpp  Main.hpp  MavlinkCommunication.hpp  MessageQueue.hpp  MotorController.hpp  Observer.hpp  PayloadManager.hpp  RemoteController.hpp  SensorData.hpp  SensorManager.hpp  SharedResource.hpp  Telemetry.hpp  TelemetryManager.hpp  ThreadManager.hpp  WaypointNavigation.hpp
Linux Config files/rootfs/yocto-layer/: info.txt
Src/: BatteryManager.cpp  FlightController.cpp  Main.cpp  MavlinkCommunication.cpp  MotorController.cpp  PayloadManager.cpp  RemoteController.cpp  SensorData.cpp  SensorManager.cpp  Telemetry.cpp  TelemetryManager.cpp  ThreadManager.cpp  WaypointNavigation.cpp
Tests/: BatteryManager_test.cpp  FlightController_test.cpp  MotorController_test.cpp  PayloadManager_test.cpp  RemoteController_test.cpp  SensorManager_test.cpp  TelemetryManager_test.cpp
